<resources>
    <string name="app_name">PawPal</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">My Account</string>
    <string name="action_logout">Log out</string>
    <string name="app_id">296429224087474</string>
    <string name="title_activity_my_dog">My Dog</string>
    <string name="facebook_app_id">720734044776444</string>
    <string name="fb_login_protocol_scheme">fb720734044776444</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">PawPal</string>
    <string name="title_activity_mydog2">My Dog</string>
    <string name="title_activity_dog_add_info">Add Dog</string>
    <string name="title_activity_search_breed">Search Breed</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_my_dog_detail">My Dog Info.</string>
    <string name="title_activity_same_dog">Look like my dog</string>
    <string name="title_activity_found_post">Found Post</string>
    <string name="title_activity_found_post_detail">Dog Info.</string>
    <string name="title_activity_lost_post_acitivity">Lost Post</string>
    <string name="title_activity_find_post">Find Post</string>
    <string name="title_activity_same_dog_search">Result Search</string>

    <string name="activity_register_register">Sign Up!</string>
    <string name="activity_register_email">E-mail</string>
    <string name="activity_register_password">รหัสผ่าน  </string>
    <string name="activity_register_password_alert"> *ต้องเป็นตัวอักษรหรือตัวเลขอย่างน้อย 8-24 ตัวอักษร</string>
    <string name="activity_register_confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="activity_register_confirm_password_alert">*กรอกรหัสผ่านต้องตรงกัน</string>
    <string name="activity_register_name">ชื่อ-นามสกุล</string>
    <string name="activity_register_tel">เบอร์โทรศัพท์ที่ติดต่อได้</string>
    <string name="activity_register_tel2">เบอร์โทรศัพท์สำรอง</string>
    <string name="activity_register_address">ที่อยู่</string>
    <string name="activity_register_facebook">Facebook</string>
    <string name="activity_register_lineID">Line ID</string>
    <string name="activity_register_confirm">ยืนยันข้อมูล</string>
    <string name="activity_register_cancel">ยกเลิก</string>
    <string name="activity_register_alert_fill_all">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="activity_register_alert_fill_all_title">ข้อมูลไม่ครบถ้วน</string>
    <string name="activity_register_alert_password_not_match">กรุณากรอกรหัสผ่านใหม่</string>
    <string name="activity_register_alert_password_not_match_title">รหัสผ่านไม่ตรงกัน</string>
    <string name="activity_register_alert_regis_success">ยินดีด้วย! ลงทะเบียนสำเร็จ</string>
    <string name="activity_register_alert_regis_success_title">ลงทะเบียนเรียบร้อย</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">รหัสผ่าน</string>
    <string name="action_sign_in">เข้าสู่ระบบ</string>
    <string name="action_sign_in_short">เข้าสู่ระบบ</string>
    <string name="error_invalid_email">E-mail ไม่ถูกต้อง</string>
    <string name="error_invalid_password">รหัสผ่านต้องเป็นตัวอักษรหรือตัวเลขอย่างน้อย 8-24 ตัวอักษร</string>
    <string name="error_incorrect_password">รหัสผ่านไม่ถูกต้อง</string>
    <string name="error_field_required">ต้องกรอกข้อมูลที่ช่องนี้</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Home Fragment-->
    <string name="fragment_home_pet">สัตว์เลี้ยง</string>

    <!--Add Dog Fragment-->
    <string name="fragment_add_dog_name">ชื่อสัตว์เลี้ยงของคุณ</string>
    <string name="fragment_add_dog_breed">พันธุ์</string>
    <string name="fragment_add_dog_gender">เพศ</string>
    <string name="fragment_add_dog_sterize">ทำหมัน</string>
    <string name="fragment_add_dog_birthday">วันเกิด</string>
    <string name="fragment_add_dog_age">อายุ ( ปี )</string>
    <string name="fragment_add_dog_microship">รหัสไม่โครชิพ (ถ้ามี)</string>
    <string name="fragment_add_dog_bloodtype">กรุ๊ปเลือด (ถ้าทราบ)</string>
    <string name="fragment_add_dog_add">เพิ่มสัตว์เลี้ยง</string>
    <string-array name="fragment_add_dog_breed_type">
        <item>Siberian Husky</item>
        <item>Pug</item>
        <item>Labrador Retriever</item>
        <item>Beagle</item>
        <item>German Shepherd</item>
        <item>Poodle</item>
        <item>Bulldog</item>
    </string-array>
    <string-array name="fragment_add_dog_gender_type">
        <item>ตัวผู้</item>
        <item>ตัวเมีย</item>
    </string-array>
    <string-array name="fragment_add_dog_bloodtype_type">
        <item>ไม่ทราบ</item>
        <item>DEA</item>
        <item>A</item>
        <item>B</item>
        <item>ZZZ</item>
    </string-array>
</resources>
